[gd_scene load_steps=3 format=3 uid="uid://cyo2pi8sut4xs"]

[ext_resource type="Script" path="res://ArrayViz/ArrayProcessor/ArrayProcessor.gd" id="1_ewb6l"]
[ext_resource type="PackedScene" uid="uid://nwj6uxl8v008" path="res://ArrayViz/ArraySlice/array_slice.tscn" id="1_rydk1"]

[node name="ArrayProcessor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ewb6l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.137255)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArraySlice" parent="VBoxContainer" instance=ExtResource("1_rydk1")]
layout_mode = 2
size_flags_stretch_ratio = 4.0

[node name="CommBuffer" parent="VBoxContainer" instance=ExtResource("1_rydk1")]
layout_mode = 2
read_color = Color(0.721569, 0.243137, 1, 1)
write_color = Color(0, 0.933333, 1, 1)
clear_color = Color(0.462745, 0.462745, 0.462745, 1)
